<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutCadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher_foreground"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:drawableStart="@android:drawable/ic_menu_edit"
        android:backgroundTint="#689F38"
        android:padding="12dp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/imgFoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/edtCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/categoria"
        android:inputType="textEmailAddress"
        android:drawableStart="@android:drawable/ic_menu_edit"
        android:backgroundTint="#689F38"
        android:padding="12dp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/edtNome"
        app:layout_constraintStart_toStartOf="@id/edtNome"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:backgroundTint="#689F38"
        android:padding="12dp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/edtCategoria"
        app:layout_constraintStart_toStartOf="@id/edtCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"  />


    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:backgroundTint="@android:color/holo_green_light"
        android:textSize="18sp"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/edtTelefone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:backgroundTint="@android:color/holo_purple"
        android:textSize="18sp"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/btnSalvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
