<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSurface"
    android:padding="16dp"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="@color/cor_titulo"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        android:textAllCaps="false"
        android:backgroundTint="@color/cor_div"
        android:textColor="@color/cor_titulo"
        android:textSize="18sp"
        android:elevation="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtFiltro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/filtro"
        android:inputType="text"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:textColor="@color/cor_titulo"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:background="@color/cor_quad"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnAdicionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewLojas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@color/cor_div"
        android:dividerHeight="2dp"

        android:background="@color/fundo"
        android:elevation="10dp"
        android:padding="8dp"
        android:listSelector="@color/cor_sel"
        app:layout_constraintTop_toBottomOf="@id/edtFiltro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
